--- a/src/App.css
+++ b/src/App.css
@@ -53,4 +53,13 @@
   border-radius: 1rem;
 
 }
+input[type=search]{
+  background-color: blue;
+  padding: 5px 10px;
+  margin: 5px;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.8rem;
+}
+
 
